<resources>
    <string name="app_name">燕习</string>
    <string name="exam_score">考试成绩</string>
    <string name="class_schedule">课程表</string>
    <string name="user">个人信息</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="standradpicture">图片</string>
    <string name="certain">确定</string>
    <string name="please_password">请输入密码</string>
    <string name="please_password2">请输入今日校园密码</string>
    <string name="please_num">请输入学号</string>
    <string name="login">登录</string>
    <string name="Monday">周一</string>
    <string name="Tuesday">周二</string>
    <string name="Wednesday">周三</string>
    <string name="Thursday">周四</string>
    <string name="Friday">周五</string>
    <string name="Saturday">周六</string>
    <string name="Sunday">周日</string>
    <string name="name">燕习</string>
    <string name="empty_room">空教室</string>
    <string name="inform">通知公告</string>
    <string name="detail_inform">通知详情</string>
    <string name="grade">成绩</string>
    <string name="degree">学位课</string>
    <string name="resit">补考</string>
    <string name="setting">设置</string>
    <string name="exam_time">考试时间</string>
    <string name="exam_project">科目:</string>
    <string name="exam_item_time">时间：</string>
    <string name="averageGPANormal">必修课平均绩点（正考）：</string>
    <string name="averageGPAMost">必修课平均绩点（最高）：</string>
    <string name="averageGPAIncludeOptional">必修课平均绩点（最高含选修）：</string>
    <string name="degreeCourseGPA">学位课绩点：</string>

    <string name="exam_location">地点:</string>
    <string name="exam_num">座位号:</string>
    <string name="vent">兔小巢</string>
    <string name="tip">初次使用务必输入正确\n登陆失败可能是因为验证码不对，再试一次</string>
    <string name="tip2">这是今日校园的登录入口</string>
    <string name="school_card">校园卡</string>
    <string name="updateing">正在更新中，大概三分钟……</string>
    <string name="judge">请进行课程评价</string>
    <string name="library">图书查询</string>
    <string name="seat">座位预约</string>
    <string name="school_calendar">校历</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="edu_password">教务密码</string>
    <string name="today_edit_password">今日校园密码</string>
    <string name="library_edit_password">图书馆密码</string>
    <string name="collect">收藏</string>
    <string name="share">分享</string>
    <string name="mycollect">我的收藏</string>
    <string name="cancel_collect">取消收藏</string>

</resources>
