<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="com.example.ysuselfstudy.ui.first.MainFragment"
        android:label="@string/name"
        tools:layout="@layout/main_fragment" />

    <fragment
        android:id="@+id/roomDetailFragment"
        android:name="com.example.ysuselfstudy.ui.emptyroom.RoomDetailFragment"
        android:label="@string/empty_room"
        tools:layout="@layout/room_detail_fragment" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.ysuselfstudy.ui.login.LoginFragment"
        android:label="@string/login" />
    <fragment
        android:id="@+id/informationDetailFragment"
        android:name="com.example.ysuselfstudy.ui.webview.WebFragment"
        android:label="@string/detail_inform" />
    <fragment
        android:id="@+id/gradeFragment"
        android:name="com.example.ysuselfstudy.ui.grade.GradeHostFragment"
        android:label="@string/grade" />
    <fragment
        android:id="@+id/mySettingsFragment"
        android:name="com.example.ysuselfstudy.ui.setting.MySettingsFragment"
        android:label="@string/setting" />
    <fragment
        android:id="@+id/examFragment"
        android:name="com.example.ysuselfstudy.ui.exam.ExamFragment"
        android:label="@string/exam_time" />
    <fragment
        android:id="@+id/campusCardFragment"
        android:name="com.example.ysuselfstudy.ui.campuscard.CampusCardFragment"
        android:label="@string/school_card"
        tools:layout="@layout/campus_card_fragment" />
    <fragment
        android:id="@+id/uploadFragment"
        android:name="com.example.ysuselfstudy.ui.uploadroom.UploadFragment"
        android:label="upload_fragment"
        tools:layout="@layout/upload_fragment" />
    <fragment
        android:id="@+id/webFragment"
        android:name="com.example.ysuselfstudy.ui.webview.WebFragment"
        android:label="@string/judge"
        tools:layout="@layout/web_fragment" />

    <fragment
        android:id="@+id/librarySearch"
        android:name="com.example.ysuselfstudy.ui.webview.WebFragment"
        android:label="@string/library"
        tools:layout="@layout/web_fragment" />

    <fragment
        android:id="@+id/seat"
        android:name="com.example.ysuselfstudy.ui.webview.WebFragment"
        android:label="@string/seat"
        tools:layout="@layout/web_fragment" />

    <fragment
        android:id="@+id/school_calendar"
        android:name="com.example.ysuselfstudy.ui.webview.WebFragment"
        android:label="@string/school_calendar"
        tools:layout="@layout/web_fragment" />

</navigation>