<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/examFragment"
            android:icon="@mipmap/ic_exam"
            android:title="@string/exam_time" />
        <item
            android:id="@+id/gradeFragment"
            android:icon="@mipmap/ic_grade"
            android:title="@string/exam_score" />
        <item
            android:id="@+id/campusCardFragment"
            android:icon="@mipmap/ic_card"
            android:title="@string/school_card"
            android:visible="false" />
        <item
            android:id="@+id/mySettingsFragment"
            android:icon="@mipmap/ic_setting"
            android:title="@string/setting" />


    </group>
</menu>